--- a/_config.yml
+++ b/_config.yml
@@ -4,19 +4,20 @@ permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
+markdown: rdiscount
 pygments: true
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : Home
+tagline: 
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Ye Bin
+  email : 
+  github : yebin
+  twitter : 
+  feedburner : yebinfo
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +27,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://www.yebin.info
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -81,16 +82,8 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
-    livefyre :
-      site_id : 123
-    intensedebate :
-      account : 123abc
-    facebook :
-      appid : 123
-      num_posts: 5
-      width: 580
-      colorscheme: light
+      short_name : yebinfo
+
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
