--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
-RewriteEngine On
-RewriteRule ^(.*)$ http://www.slyar.com [R=301,L]
 
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^(yebin\.info)(:80)? [NC]
+RewriteRule ^(.*) http://www.yebin.info/$1 [R=301,L]
+order deny,allow
