--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,3 @@
-<Files ~ "^.(htaccess|htpasswd)$">
-deny from all
-</Files>
-RewriteEngine on
-RewriteCond %{HTTP_HOST} ^(yebin\.info)(:80)? [NC]
-RewriteRule ^(.*) http://www.yebin.info [R=301,L]
-order deny,allow
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^[^\.]+\.yebin\.info$ [NC]
+RewriteRule ^(.*)$ http://www.yebin.info/$1 [R=301,L]
